--- a/Tweet Analysis.ipynb
+++ b/Tweet Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,8 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "positive = []\n",
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,9 +109,9 @@
       "                 awesome = True           positi : négati =     17.2 : 1.0\n",
       "                headache = True           négati : positi =     16.2 : 1.0\n",
       "                      Hi = True           positi : négati =     12.7 : 1.0\n",
-      "                     fan = True           positi : négati =      9.7 : 1.0\n",
       "               beautiful = True           positi : négati =      9.7 : 1.0\n",
       "                     New = True           positi : négati =      9.7 : 1.0\n",
+      "                     fan = True           positi : négati =      9.7 : 1.0\n",
       "                   Thank = True           positi : négati =      9.7 : 1.0\n",
       "                    haha = True           positi : négati =      9.3 : 1.0\n"
      ]
@@ -124,14 +126,14 @@
    "metadata": {},
    "source": [
     "- The first column is why we needed format_sentence\n",
-    "    - Number of occurences of each word for both labels to compute the ratio between th two\n",
+    "    - Number of occurences of each word for both labels to compute the ratio between the two\n",
     "- Second column lists on the left which occurs more frequently\n",
     "- Third column is the ratio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +181,7 @@
     }
    ],
    "source": [
-    "test3 = 'I do not have an headache'\n",
+    "test3 = 'I do not have a headache'\n",
     "print(classifier.classify(format_sentence(test3)))"
    ]
   },
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
